--- a/FoodDelivery.Web/Views/Shared/_LoginPartial.cshtml
+++ b/FoodDelivery.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@inject SignInManager<FoodDelivery.Domain.Identity.Customer> SignInManager
+@inject UserManager<FoodDelivery.Domain.Identity.Customer> UserManager
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
