--- a/FoodDelivery.Web/Views/FoodItems/Create.cshtml
+++ b/FoodDelivery.Web/Views/FoodItems/Create.cshtml
@@ -33,6 +33,11 @@
                 <span asp-validation-for="Image" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Category" class="control-label"></label>
+                <input asp-for="Category" class="form-control" />
+                <span asp-validation-for="Category" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
