--- a/FoodDelivery.Web/Views/FoodItems/Delete.cshtml
+++ b/FoodDelivery.Web/Views/FoodItems/Delete.cshtml
@@ -35,10 +35,17 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Image)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Category)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Category)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
+        <input type="hidden" asp-for="RestaurantId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
