--- a/FoodDelivery.Web/Views/FoodItems/Edit.cshtml
+++ b/FoodDelivery.Web/Views/FoodItems/Edit.cshtml
@@ -34,7 +34,13 @@
                 <input asp-for="Image" class="form-control" />
                 <span asp-validation-for="Image" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="Category" class="control-label"></label>
+                <input asp-for="Category" class="form-control" />
+                <span asp-validation-for="Category" class="text-danger"></span>
+            </div>
             <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="RestaurantId" />
             
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
