--- a/FoodDelivery.Web/Views/Restaurants/AddFoodItemToRestaurant.cshtml
+++ b/FoodDelivery.Web/Views/Restaurants/AddFoodItemToRestaurant.cshtml
@@ -4,7 +4,7 @@
 
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="AddFoodItemToRestaurant">
+        <form asp-action="AddFoodItemToRestaurant" asp-route-id="@Model.RestaurantId">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
@@ -25,6 +25,11 @@
                 <label asp-for="ImageUrl" class="control-label"></label>
                 <input asp-for="ImageUrl" class="form-control" />
                 <span asp-validation-for="ImageUrl" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Category" class="control-label"></label>
+                <input asp-for="Category" class="form-control" />
+                <span asp-validation-for="Category" class="text-danger"></span>
             </div>
             <input type="hidden" asp-for="RestaurantId" />
             <div class="form-group">
