Added option to add food items to delivery, view ordered items, and place orders.

--- a/FoodDelivery.Web/Views/FoodItems/Create.cshtml
+++ b/FoodDelivery.Web/Views/FoodItems/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model FoodDelivery.Domain.DomainModels.FoodItem
+﻿@* @model FoodDelivery.Domain.DomainModels.FoodItem
 
 @{
     ViewData["Title"] = "Create";
@@ -51,3 +51,4 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+ *@
