--- a/FoodDelivery.Web/Views/Shared/_Layout.cshtml
+++ b/FoodDelivery.Web/Views/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Restaurants" asp-action="Index">Restaurants</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="DeliveryOrders" asp-action="Index">Deliveries</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
