--- a/FoodDelivery.Web/Views/Restaurants/Details.cshtml
+++ b/FoodDelivery.Web/Views/Restaurants/Details.cshtml
@@ -118,6 +118,7 @@
                         <h5 class="card-title">@item.Name</h5>
                         <p class="card-text">@item.Description</p>
                         <h6 class="card-text">$@item.Price</h6>
+                        <p class="card-text">Time to prepare: @item.TimeToPrepareMinutes minutes</p>
                       </div>
               
                       <div class="card-footer">
@@ -182,6 +183,7 @@
                             <h5 class="card-title">@item.Name</h5>
                             <p class="card-text">@item.Description</p>
                             <h6 class="card-text">$@item.Price</h6>
+                            <p class="card-text">Time to prepare: @item.TimeToPrepareMinutes minutes</p>
                           </div>
               
                           <div class="card-footer">
