--- a/FoodDelivery.Web/Views/DeliveryOrders/Index.cshtml
+++ b/FoodDelivery.Web/Views/DeliveryOrders/Index.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    int MaxTimeToPrepare = 0;
 }
 
 <h1>Index</h1>
@@ -10,7 +11,7 @@
 <p>
     <a class="btn btn-success" asp-action="Order">Order Now</a>
 </p>
-<table class="table">
+@* <table class="table">
     <thead class="thead-dark">
         <tr>
             <th>#</th>
@@ -62,6 +63,98 @@
                 <th></th>
                 <th></th>
                 <th>$@Model.TotalPrice</th>
+                <th></th>
+            </tr>
+        }
+    </tfoot>
+</table>
+ *@
+<table class="table">
+    <thead class="thead-dark">
+        <tr>
+            @if(Model.RestaurantsOrderedFrom.Count() == 0)
+            {
+                <tr>
+                    <td colspan="5" class="text-center"><b><i>No active products</i></b></td>
+                </tr>
+            }
+            else
+            {
+                @for(int i = 0; i < Model.RestaurantsOrderedFrom.Count(); i++)
+                {
+                    var restaurant = Model.RestaurantsOrderedFrom[i];
+                    MaxTimeToPrepare = 0;
+                    <th>
+                        <h3>
+                            @Html.DisplayFor(modelItem => restaurant.Name)
+                        </h3>
+                    </th>
+                    <table class="table">
+                        <thead class="thead-dark">
+                            <tr>
+                                <th>#</th>
+                                <th>Meal Name</th>
+                                <th>Quantity</th>
+                                <th>Single Price</th>
+                                <th></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @for (int j = 0; j < Model.AllFoodItems.Where(z => z.Restaurant.Equals(restaurant)).Count(); j++)
+                            {
+                                var item = Model.AllFoodItems.Where(z => z.Restaurant.Equals(restaurant)).ToList()[j];
+                                int TimeToPrepareSingleItem = item.FoodItem.TimeToPrepareMinutes * item.Quantity;
+                                if(TimeToPrepareSingleItem > MaxTimeToPrepare)
+                                {
+                                    MaxTimeToPrepare = TimeToPrepareSingleItem;
+                                }
+                                TimeToPrepareSingleItem = 0;
+                                <tr>
+                                <td>@(j + 1)</td>
+                                <td>
+                                        @Html.DisplayFor(modelItem => item.FoodItem.Name)
+                                </td>
+                                <td>
+                                        @Html.DisplayFor(modelItem => item.Quantity)
+                                </td>
+                                <td>
+                                        @Html.DisplayFor(modelItem => item.FoodItem.Price)
+                                </td>
+                                <td>
+                                    <a class="btn btn-danger" asp-action="DeleteFoodItemFromDelivery" asp-route-foodItemId="@item.FoodItem.Id">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16">
+                                            <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5M11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47M8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5" />
+                                        </svg>
+                                    </a>
+                                </td>
+                            </tr>
+                            }
+                        </tbody>
+                        <tfoot>
+                                @if (Model.AllFoodItems.Count() != 0)
+                                {
+                                <tr>
+                                    <th>Time To Prepare:</th>
+                                    <th></th>
+                                    <th></th>
+                                    <th>@MaxTimeToPrepare minutes</th>
+                                    <th></th>
+                                </tr>
+                                }
+                        </tfoot>
+                    </table>
+                }
+            }
+        </tr>
+    </thead>
+    <tfoot class="tfoot-dark">
+        @if(Model.RestaurantsOrderedFrom.Count() != 0)
+        {
+            <tr>
+                <th>Total Price:</th>
+                <th></th>
+                <th></th>
+                <th>@Model.TotalPrice</th>
                 <th></th>
             </tr>
         }
