--- a/FoodDelivery.Web/Views/FoodItems/Details.cshtml
+++ b/FoodDelivery.Web/Views/FoodItems/Details.cshtml
@@ -40,6 +40,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Category)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.TimeToPrepareMinutes)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.TimeToPrepareMinutes)
+        </dd>
     </dl>
 </div>
 <div>
