--- a/FoodDelivery.Web/Views/DeliveryOrders/Index.cshtml
+++ b/FoodDelivery.Web/Views/DeliveryOrders/Index.cshtml
@@ -72,7 +72,7 @@
 <table class="table">
     <thead class="thead-dark">
         <tr>
-            @if(Model.RestaurantsOrderedFrom.Count() == 0)
+            @if(Model.RestaurantsOrderedFrom?.Count() == 0)
             {
                 <tr>
                     <td colspan="5" class="text-center"><b><i>No active products</i></b></td>
@@ -80,7 +80,7 @@
             }
             else
             {
-                @for(int i = 0; i < Model.RestaurantsOrderedFrom.Count(); i++)
+                @for(int i = 0; i < Model.RestaurantsOrderedFrom?.Count(); i++)
                 {
                     var restaurant = Model.RestaurantsOrderedFrom[i];
                     MaxTimeToPrepare = 0;
@@ -100,10 +100,11 @@
                             </tr>
                         </thead>
                         <tbody>
-                            @for (int j = 0; j < Model.AllFoodItems.Where(z => z.Restaurant.Equals(restaurant)).Count(); j++)
+                            @for (int j = 0; j < Model?.AllFoodItems?.Where(z => z.Restaurant.Equals(restaurant)).Count(); j++)
                             {
                                 var item = Model.AllFoodItems.Where(z => z.Restaurant.Equals(restaurant)).ToList()[j];
-                                int TimeToPrepareSingleItem = item.FoodItem.TimeToPrepareMinutes * item.Quantity;
+                                //int TimeToPrepareSingleItem = item.FoodItem.TimeToPrepareMinutes * item.Quantity;
+                                int TimeToPrepareSingleItem = item.FoodItem.TimeToPrepareMinutes;
                                 if(TimeToPrepareSingleItem > MaxTimeToPrepare)
                                 {
                                     MaxTimeToPrepare = TimeToPrepareSingleItem;
@@ -148,7 +149,7 @@
         </tr>
     </thead>
     <tfoot class="tfoot-dark">
-        @if(Model.RestaurantsOrderedFrom.Count() != 0)
+        @if(Model.RestaurantsOrderedFrom?.Count() != 0)
         {
             <tr>
                 <th>Total Price:</th>
