--- a/FoodDelivery.Web/Views/FoodItems/Edit.cshtml
+++ b/FoodDelivery.Web/Views/FoodItems/Edit.cshtml
@@ -39,6 +39,11 @@
                 <input asp-for="Category" class="form-control" />
                 <span asp-validation-for="Category" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="TimeToPrepareMinutes" class="control-label"></label>
+                <input asp-for="TimeToPrepareMinutes" class="form-control" />
+                <span asp-validation-for="TimeToPrepareMinutes" class="text-danger"></span>
+            </div>
             <input type="hidden" asp-for="Id" />
             <input type="hidden" asp-for="RestaurantId" />
             
