--- a/FoodDelivery.Web/Views/Restaurants/Details.cshtml
+++ b/FoodDelivery.Web/Views/Restaurants/Details.cshtml
@@ -84,9 +84,9 @@
 
 
         <h3>Filter by Category</h3>
-        <form method="get" asp-action="Details" asp-route-id="@Model.Restaurant.Id" class="m-3">
+        <form method="get" asp-action="Details" asp-route-id="@Model?.Restaurant.Id" class="m-3">
             <div class="form-group">
-                <select name="category" asp-for="CurrentCategory" asp-items="@(new SelectList(Model.Categories, Model.CurrentCategory))" class="form-control">
+                <select name="category" asp-for="CurrentCategory" asp-items="@(new SelectList(Model?.Categories, Model?.CurrentCategory))" class="form-control">
                     <option value="">All</option>
                 </select>
             </div>
@@ -95,7 +95,7 @@
         
         
 
-        @if(Model.CurrentCategory != null)
+        @if(Model?.CurrentCategory != null)
         {
             <div class="bg-primary text-uppercase text-light p-1">
                 <h3> @Model.CurrentCategory </h3>
