--- a/FoodDeliveryAdminApp/FoodDeliveryAdminApp/Views/Restaurant/Details.cshtml
+++ b/FoodDeliveryAdminApp/FoodDeliveryAdminApp/Views/Restaurant/Details.cshtml
@@ -5,17 +5,17 @@
 }
 
 
-@model FoodDeliveryAdminApp.Models.Order
+@model FoodDeliveryAdminApp.Models.Restaurant
 
 <div class="container">
     <p>
         @* <a class="btn btn-primary"></a> *@
-        <h1>Order for @Model?.Owner?.FirstName @Model?.Owner?.LastName</h1>
+        <h1>Menu for @Model?.Name Restaurant</h1>
     </p>
 
-    @for(int i=0;i<Model?.FoodItemInOrders?.Count(); i++)
+     @for(int i=0;i<Model?.FoodItems?.Count(); i++)
     {
-        var item = Model.FoodItemInOrders.ElementAt(i).OrderedFoodItem;
+        var item = Model.FoodItems.ElementAt(i);
         if(i % 3 == 0)
         {
             @:<div class="row">
@@ -27,10 +27,8 @@
                 <div class="card-body">
                     <h5 class="card-title">@item?.Name</h5>
                     <p class="card-text">Description: @item?.Description</p>
-                    <p class="card-text">Restaurant: @item?.Restaurant?.Name</p>
                     <p class="card-text">Category: @item?.Category</p>
                     <p class="card-text">Time to prepare: @item?.TimeToPrepareMinutes min.</p>
-                    <p class="card-text">Quantity: @Model.FoodItemInOrders.ElementAt(i).Quantity</p>
                     <h6>Price: @item?.Price$</h6>
                 </div>
 
@@ -42,4 +40,7 @@
             @:</div>
         }
     }
+
 </div>
+
+
