--- a/FoodDeliveryApp/FoodDelivery.Web/Views/Shared/_Layout.cshtml
+++ b/FoodDeliveryApp/FoodDelivery.Web/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Restaurants" asp-action="Index">Restaurants</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="DeliveryOrders" asp-action="Index">Deliveries</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="DeliveryOrders" asp-action="Index">Delivery Cart</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
