--- a/FoodDeliveryAdminApp/FoodDeliveryAdminApp/Views/Shared/_Layout.cshtml
+++ b/FoodDeliveryAdminApp/FoodDeliveryAdminApp/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Orders" asp-action="Index">All Orders</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Restaurants" asp-action="ImportRestaurants">Import Restaurants</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Restaurant" asp-action="ImportIndex">Import Restaurants</a>
                         </li>
                     </ul>
                 </div>
