--- a/FoodDeliveryAdminApp/FoodDeliveryAdminApp/Views/Orders/Index.cshtml
+++ b/FoodDeliveryAdminApp/FoodDeliveryAdminApp/Views/Orders/Index.cshtml
@@ -7,9 +7,9 @@
 @model List<FoodDeliveryAdminApp.Models.Order>
 
 <div class="container">
-    @* <div class="row">
-        <a asp-controller="Order" asp-action="ExportAllOrders" class="btn btn-info">Export Orders</a>
-    </div> *@
+    <div class="row">
+        <a asp-controller="Orders" asp-action="ExportAllOrders" class="btn btn-success"><h1>Export All Orders</h1></a>
+    </div>
 
     <div class="row m-5">
         <table class="table">
